crates/compiler/src/tests/e2e/good/0580_hashmap_set_only/main.gom
fn main() -> unit {
    let m: HashMap[int32, string] = HashMap::new();
    m[1] = "ok";
    println("ok");
}
