crates/compiler/src/tests/e2e/bad/0050_extern_varargs_parse_error/main.gom
extern "go" "fmt" ["Sprintf"] sprintf(format: string, args: int32) -> string;

fn main() {
    let s = sprintf("number: %d", 42);
    println(s);
}
